# cbc-simulator

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: build.yml  build_cbc_sim.yml
src/: lib.rs
src/network/: builder.rs  event.rs  mod.rs
src/network/node/: mod.rs  simple_honest_node.rs
src/simulator/: link.rs  message.rs  mod.rs  network.rs  network_builder.rs
src/simulator/node/: mod.rs  simple_honest_node.rs
